# ProyectoMemoria

./: CMakeLists.txt
apps/calculadora/: CMakeLists.txt  main.cpp
apps/calculadora/include/: Calculadora.h  Potencia.h
apps/calculadora/src/: Calculadora.cpp  Potencia.cpp  main.cpp
apps/simulador/: CMakeLists.txt
interfaz/: CMakeLists.txt  main.cpp
profiler_lib/: CMakeLists.txt
